# crypto_management

./: .gitignore  Cargo.toml  README.md  history_assets.csv  history_barca.csv  history_totals.csv  token_metadata.csv  wallet_allocations Test.csv  wallet_allocations.csv  wallet_allocationsDaniela.csv  wallet_barca.csv  walletbackup.csv
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BarcaSection.jsx  Filters.jsx  PerAssetTable.jsx  PerGroupTable.jsx  SummaryHeader.jsx
frontend/src/hooks/: useAllocationsData.js
frontend/src/utils/: colors.js  format.js  format.test.js
migrations/: 0001_create_history_tables.sql  0002_update_wallet_allocations_view.sql  0003_add_group_history_and_views.sql
src/: api_client.rs  csv_history.rs  csv_store.rs  error.rs  main.rs  model.rs  service.rs
src/domain/: models.rs  repository.rs
src/infra/sqlite/: mod.rs  repo.rs
src/routes/: api.rs
src/services/: allocations.rs  mod.rs
src/tests/: integration.rs
src/usecases/: allocations_service.rs  compute_allocations.rs  history_service.rs  mod.rs
