[package]
name = "crypto_management"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.1", features = ["cors"] }

[dev-dependencies]
tempfile = "3.10.1"
