[package]
name = "crypto_management"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
dotenv = "0.15.0"
once_cell = "1.21.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
anyhow = "1.0"
